--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "shopping_list",
   "version": "0.1.0",
+  "homepage": "https://sandywezzy.github.io/shopping_list",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
@@ -19,7 +20,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -40,6 +42,7 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/react": "^14.0.0"
+    "@testing-library/react": "^14.0.0",
+    "gh-pages": "^5.0.0"
   }
 }
