--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "shopping_list",
   "version": "0.1.0",
-  "homepage": "https://sandywezzy.github.io/shopping_list",
+  "homepage": "https://sandywezzy.github.io/home",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
@@ -21,6 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
