--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "shopping_list",
   "version": "0.1.0",
-  "homepage": "https://sandywezzy.github.io/home",
+  "homepage": "https://sandywezzy.github.io/shopping_list",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
